assets_index/css/main.css
/* ... */
				.wrapper.style3 input[type="submit"].primary,
				.wrapper.style3 input[type="reset"].primary,
				.wrapper.style3 input[type="button"].primary,
				.wrapper.style3 button.primary,
				.wrapper.style3 .button.primary {
					box-shadow: none;
					background-color: #4696e5;
					color: #ffffff !important;
				}

					.wrapper.style3 input[type="submit"].primary:hover,
					.wrapper.style3 input[type="reset"].primary:hover,
					.wrapper.style3 input[type="button"].primary:hover,
					.wrapper.style3 button.primary:hover,
					.wrapper.style3 .button.primary:hover {
						background-color: #5ca3e8;
					}

					.wrapper.style3 input[type="submit"].primary:active,
					.wrapper.style3 input[type="reset"].primary:active,
					.wrapper.style3 input[type="button"].primary:active,
					.wrapper.style3 button.primary:active,
					.wrapper.style3 .button.primary:active {
						background-color: #3089e2;
					}

			.wrapper.style3 label {
				color: #828282;
			}

			.wrapper.style3 input[type="text"],
			.wrapper.style3 input[type="password"],
			.wrapper.style3 input[type="email"],
			.wrapper.style3 select,
			.wrapper.style3 textarea {
				color: inherit;
				background-color: rgba(144, 144, 144, 0.075);
				border-color: #d6d6d6;
			}

				.wrapper.style3 input[type="text"]:focus,
				.wrapper.style3 input[type="password"]:focus,
				.wrapper.style3 input[type="email"]:focus,
				.wrapper.style3 select:focus,
				.wrapper.style3 textarea:focus {
					border-color: #4696e5;
					box-shadow: 0 0 0 1px #4696e5;
				}

			.wrapper.style3 .select-wrapper:before {
				color: #d6d6d6;
			}

			.wrapper.style3 input[type="checkbox"] + label,
			.wrapper.style3 input[type="radio"] + label {
				color: #999999;
			}

				.wrapper.style3 input[type="checkbox"] + label:before,
				.wrapper.style3 input[type="radio"] + label:before {
					background-color: rgba(144, 144, 144, 0.075);
					border-color: #d6d6d6;
				}

			.wrapper.style3 input[type="checkbox"]:checked + label:before,
			.wrapper.style3 input[type="radio"]:checked + label:before {
				background-color: #4696e5;
				border-color: #4696e5;
				color: #ffffff;
			}

			.wrapper.style3 input[type="checkbox"]:focus + label:before,
			.wrapper.style3 input[type="radio"]:focus + label:before {
				border-color: #4696e5;
				box-shadow: 0 0 0 1px #4696e5;
			}

			.wrapper.style3 ::-webkit-input-placeholder {
				color: #b0b0b0 !important;
			}

			.wrapper.style3 :-moz-placeholder {
				color: #b0b0b0 !important;
			}

			.wrapper.style3 ::-moz-placeholder {
				color: #b0b0b0 !important;
			}

			.wrapper.style3 :-ms-input-placeholder {
				color: #b0b0b0 !important;
			}

			.wrapper.style3 .formerize-placeholder {
				color: #b0b0b0 !important;
			}

			.wrapper.style3 .icon {
				color: #b0b0b0;
			}

			.wrapper.style3 .image {
				box-shadow: 0 0 0 4px #f7f7f7, 0 0 0 5px #d6d6d6;
			}

				.wrapper.style3 .image.phone {
					box-shadow: none;
				}

					.wrapper.style3 .image.phone .inner, .wrapper.style3 .image.phone:before, .wrapper.style3 .image.phone:after {
						border-color: #d6d6d6;
					}

					.wrapper.style3 .image.phone .inner:before {
						background: #d6d6d6;
					}

					.wrapper.style3 .image.phone .inner:after {
						border-color: #d6d6d6;
					}

			.wrapper.style3 ul.alt > li {
				border-top-color: #d6d6d6;
			}

			.wrapper.style3 table tbody tr {
				border-color: #d6d6d6;
			}

				.wrapper.style3 table tbody tr:nth-child(2n + 1) {
					background-color: rgba(144, 144, 144, 0.075);
				}

			.wrapper.style3 table th {
				color: #828282;
			}

			.wrapper.style3 table thead {
				border-bottom-color: #d6d6d6;
			}

			.wrapper.style3 table tfoot {
				border-top-color: #d6d6d6;
			}

			.wrapper.style3 table.alt tbody tr td {
				border-color: #d6d6d6;
			}

			.wrapper.style3 input, .wrapper.style3 select, .wrapper.style3 textarea {
				color: #999999;
			}

			.wrapper.style3 a {
				color: inherit;
				border-bottom-color: #c6c6c6;
			}

				.wrapper.style3 a:hover {
					color: #4696e5;
				}

			.wrapper.style3 strong, .wrapper.style3 b {
				color: #828282;
			}

			.wrapper.style3 h1, .wrapper.style3 h2, .wrapper.style3 h3, .wrapper.style3 h4, .wrapper.style3 h5, .wrapper.style3 h6 {
				color: #828282;
			}

			.wrapper.style3 blockquote {
				border-left-color: #d6d6d6;
			}

			.wrapper.style3 code {
				background: rgba(144, 144, 144, 0.075);
				border-color: #d6d6d6;
			}

			.wrapper.style3 hr {
				border-bottom-color: #d6d6d6;
			}

		@media screen and (max-width: 980px) {

			.wrapper {
				padding: 4em 4em 2em 4em ;
			}

				.wrapper > .inner {
					width: 100%;
				}

		}

	@media screen and (max-width: 736px) and (orientation: landscape) {

		.wrapper {
			padding: 3em 3em 1em 3em ;
		}

	}

	@media screen and (max-width: 736px) and (orientation: portrait) {

		.wrapper {
			padding: 3em 1.5em 1em 1.5em ;
		}

	}

	@media screen and (max-width: 480px) and (orientation: landscape) {

		.wrapper {
			padding: 2em 1.5em 0.1em 1.5em ;
		}

	}

	@media screen and (max-width: 480px) and (orientation: portrait) {

		.wrapper {
			padding: 2em 1em 0.1em 1em ;
		}

	}

/* Header */

	#header {
		/*background-color: #4696e5;*/
		color: #d1e5f9;
		padding: 4.5em 0 2.5em 0 ;
		-moz-align-items: center;
		-webkit-align-items: center;
		-ms-align-items: center;
		align-items: center;
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-justify-content: center;
		-webkit-justify-content: center;
		-ms-justify-content: center;
		justify-content: center;
		background-image: url("images/gif3.gif"), url("images/pattern-size1.svg");
		background-position:  center;
		background-attachment: fixed, fixed;
		background-size: cover;
		background-repeat: no-repeat;
		height: 100vh;
		min-height: 35em;
	}
/* ... */

